Primeira versão com todas as funcionalidades, de agora em diante é apenas busca e correção de bugs.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=mips_multiciclo.Mips_Multiciclo
+main.class=mips_multiciclo.Mips
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
